# haskell-til

./: .gitignore
first-eta-sample/: ChangeLog.md  first-eta-sample.cabal
first-eta-sample/src/: Main.hs
first-eta-sample/src/Java/Io/: File.hs
first-eta-sample/src/Java/Nio/File/: FileVisitor.hs  Files.hs  Path.hs
first-eta-sample/src/Java/Time/: Month.hs
first-eta-sample/src/Java/Util/: Function.hs  Stream.hs
purely-functional-data-structure/: README.md  purely-functional-data-structure.cabal
purely-functional-data-structure/src/Ch2/Persistent/: FiniteMap.hs  List.hs  Tree.hs
purely-functional-data-structure/src/Ch3/: Heap.hs  RedBlack.hs
purely-functional-data-structure/src/Ch3/Heap/: Binominal.hs  Left.hs
purely-functional-data-structure/src/Ch3/Heap/Binominal/: Excersise.hs
purely-functional-data-structure/src/Ch5/: Deque.hs  Pairing.hs  Queue.hs  Splay.hs
purely-functional-data-structure/src/Ch5/Queue/: Impl.hs  Interface.hs
purely-functional-data-structure/src/Ch6/: LazyBinominalHeap.hs  LazyPairingHeap.hs  PhysicistsQueue.hs  Sortable.hs
purely-functional-data-structure/src/Ch6/Sortable/: BottomUpMergeSort.hs
purely-functional-data-structure/src/Persistent/: FiniteMap.hs  List.hs  Tree.hs
wai-sample/: wai-sample.cabal
wai-sample/src/: Main.hs
