name:                wai-sample
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mike-neck/haskell-til
license:             Apache-2.0
license-file:        LICENSE
author:              Shinya Mochida
maintainer:          mike_neck
copyright:           2017 Shinya Mochida
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable wai-sample
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wai
                     , warp
                     , http-types
                     , bytestring
